hphp/test/slow/emitter_fuzzy/fun_arg_validation.php.expectf
Fatal error: fun() expects exactly 1 parameter, 2 given in %s on line 4
